# api.consumet.org

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
src/: main.rs
src/models/: types.rs
src/routes/: mod.rs
src/routes/movies/: dramacool.rs  flixhq.rs  mod.rs  mount.rs
src/utils/: mod.rs
