[package]
name = "consumet-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros", "http2", "json"] }
consumet = "0.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [ "env-filter", "fmt", "json" ] }
time = { version = "0.3", features = [ "formatting" ] }
tower = "0.4.13"
tracing = "0.1.37"
openssl = { version = "0.10.62", features = ["vendored"] }
anyhow = "1.0.79"
humantime-serde = "1.1.1"
tower-http = { version = "0.5", features = [ "trace" ] }
dotenv = "0.15.0"
tracing-log = "0.2.0"
